examples/03-traffic-splitting/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo-v1
  namespace: echo
  labels:
    app: echo
    version: v1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: echo
      version: v1
  template:
    metadata:
      labels:
        app: echo
        version: v1
    spec:
      containers:
        - name: echo
          image: ealen/echo-server:0.9.2
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: echo-v1
  namespace: echo
  labels:
    app: echo
    version: v1
spec:
  selector:
    app: echo
    version: v1
  ports:
    - name: http
      port: 80
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo-v2
  namespace: echo
  labels:
    app: echo
    version: v2
spec:
  replicas: 2
  selector:
    matchLabels:
      app: echo
      version: v2
  template:
    metadata:
      labels:
        app: echo
        version: v2
    spec:
      containers:
        - name: echo
          image: ealen/echo-server:0.9.2
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: echo-v2
  namespace: echo
  labels:
    app: echo
    version: v2
spec:
  selector:
    app: echo
    version: v2
  ports:
    - name: http
      port: 80
      targetPort: 80
