examples/03-traffic-splitting/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: echo-traffic-split
  namespace: echo
spec:
  parentRefs:
    - name: echo-gateway
  hostnames:
    - echo.localtest.me
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: echo-v1
          port: 80
          weight: 80
        - name: echo-v2
          port: 80
          weight: 20
